--- a/Sekretariat/resultLulus.html
+++ b/Sekretariat/resultLulus.html
@@ -177,7 +177,7 @@
           <li class="nav-item">
             <a class="nav-link" href="kerjaSama.html">
               <i class="fas fa-user-friends"></i>
-              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+              <span class="menu-title">Mitra Kerjasama</span>
             </a>
           </li>
           <li class="nav-item">
@@ -238,6 +238,12 @@
                 </li>
               </ul>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="anggaran.html">
+              <i class="fas fa-wallet"></i>
+              <span class="menu-title">Relasi Anggaran</span>
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="dokumentasi.html">
@@ -320,19 +326,17 @@
                           <th>Jenis Kelamin</th>
                           <th>Program Studi</th>
                           <th>Jenjang Pendidikan</th>
-                          <th>Mulai - Akhir Perkuliahan</th>
                           <th>Tahun Masuk</th>
                           <th>Bulan Masuk</th>
-                          <th>Kemitraan</th>
-                          <th>Priode Pendidikan</th>
-                          <th>Lokasi Pendidikan</th>
+                          <th>Kerjasama Industri</th>
+                          <th>Kota Lokasi Pendidikan</th>
+                          <th>Kabupaten Lokasi Pendidikan</th>
                           <th>Sumber Dana</th>
                           <th>Tahun Lulus</th>
                           <th>Bulan Lulus</th>
                           <th>Tanggal Yudisium</th>
                           <th>Tanggal Wisuda</th>
                           <th>Unit Pendidikan</th>
-                          <th>Keterangan</th>
                           <th>Anggaran</th>
                           <th>Penempatan Kerja</th>
                           <th>IPK</th>
@@ -361,9 +365,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -391,9 +393,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -421,9 +421,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -451,9 +449,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -481,9 +477,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -511,9 +505,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -541,9 +533,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -571,9 +561,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -601,9 +589,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -631,9 +617,7 @@
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
                           <td>Computer Science</td>
-                          <td>S1</td>
                           <td>Jakarta Barat</td>
-                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
