--- a/Sekretariat/downloadAktif.html
+++ b/Sekretariat/downloadAktif.html
@@ -177,7 +177,7 @@
           <li class="nav-item">
             <a class="nav-link" href="kerjaSama.html">
               <i class="fas fa-user-friends"></i>
-              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+              <span class="menu-title">Mitra Kerjasama</span>
             </a>
           </li>
           <li class="nav-item">
