--- a/Sekretariat/kerjaSama.html
+++ b/Sekretariat/kerjaSama.html
@@ -151,7 +151,7 @@
           <li class="nav-item">
             <a class="nav-link" href="kerjaSama.html">
               <i class="fas fa-user-friends"></i>
-              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+              <span class="menu-title">Mitra Kerjasama</span>
             </a>
           </li>
           <li class="nav-item">
@@ -214,6 +214,12 @@
             </div>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="anggaran.html">
+              <i class="fas fa-wallet"></i>
+              <span class="menu-title">Relasi Anggaran</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="dokumentasi.html">
               <i class="fas fa-book"></i>
               <span class="menu-title">Dokumentasi</span>
@@ -236,19 +242,61 @@
             <div class="col-12 grid-margin">
               <div class="card card-download">
                 <div class="card-body">
-                  <!-- <div class="row justify-content-between">
-                    <div class="col-md-6 pt-1">
-                      <h4 class="card-title fs-3">User Activity</h4>
+                  <div class="row justify-content-between">
+                    <div class="col-md-6 mb-4">
+                      <!-- Button trigger modal -->
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        Add Kerja Sama
+                      </button>
+
+                      <!-- Modal -->
+                      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-xl">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h1 class="modal-title fs-5" id="exampleModalLabel">Form Kerja Sama</h1>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                              <form class="row g-3">
+                                <div class="col-md-6">
+                                  <label for="satuanKerja" class="form-label">Satuan Kerja</label>
+                                  <input type="type" class="form-control" id="satuanKerja">
+                                </div>
+                                <div class="col-md-6">
+                                  <label for="judul" class="form-label">Judul Kerja Sama</label>
+                                  <input type="text" class="form-control" id="uraian">
+                                </div>
+                                <div class="col-6">
+                                  <label for="mitra" class="form-label">Mitra Kerja Sama</label>
+                                  <input type="text" class="form-control" id="mitra">
+                                </div>
+                                <div class="col-6">
+                                  <label for="program" class="form-label">Program Studi</label>
+                                  <input type="text" class="form-control" id="program">
+                                </div>
+                                <div class="col-md-6">
+                                  <label for="waktu" class="form-label">Jangka Waktu MoU</label>
+                                  <input type="text" class="form-control" id="waktu">
+                                </div>
+                                <div class="col-md-6">
+                                  <label for="link" class="form-label">MoU Link</label>
+                                  <input type="text" class="form-control" id="link">
+                                </div>
+                              </form>
+                            </div>
+                            <div class="modal-footer">
+                              <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+                              <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                    <div class="col-md-4 mb-3">
-                      <select id="inputState" class="form-select">
-                        <option selected>Status</option>
-                        <option>Done</option>
-                        <option>Reject</option>
-                        <option>Progress</option>
-                      </select>
-                    </div>
-                  </div> -->
+                  </div>
                   <div class="table-responsive">
                     <table class="table text-center">
                       <thead>
@@ -256,10 +304,10 @@
                           <th>No.</th>
                           <th>Satuan Kerja</th>
                           <th>Judul Kerja Sama</th>
-                          <th>Kemitraan</th>
+                          <th>Mitra Kerjasama</th>
                           <th>Program Studi</th>
                           <th>Jangka Waktu MoU</th>
-                          <th>MoU Upload</th>
+                          <th>MoU Link</th>
                         </tr>
                       </thead>
                       <tbody>
