--- a/User/index.html
+++ b/User/index.html
@@ -185,6 +185,12 @@
             </div>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="anggaran.html">
+              <i class="fas fa-wallet"></i>
+              <span class="menu-title">Relasi Anggaran</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="dokumentasi.html">
               <i class="fas fa-book"></i>
               <span class="menu-title">Dokumentasi</span>
@@ -260,7 +266,13 @@
                     </div>
                     <div class="row">
                       <div class="col">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+
+                        <div class="demo-container">
+                          <a href="data:text/csv;charset=utf-8,ID,NAME,COUNTRY 0, FITZ-GERALD,ireland"
+                            download="data.csv">
+                            <button>Template</button>
+                          </a>
+                        </div>
                       </div>
                     </div>
                     <div class="main-wrapper">
