--- a/User/docPendaftar.html
+++ b/User/docPendaftar.html
@@ -164,7 +164,7 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">
               <i class="fas fa-home"></i>
-              <span class="menu-title">Dashboard</span>
+              <span class="menu-title">Home</span>
 
             </a>
           </li>
@@ -177,7 +177,7 @@
           <li class="nav-item">
             <a class="nav-link" href="kerjaSama.html">
               <i class="fas fa-user-friends"></i>
-              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+              <span class="menu-title">Mitra Kerjasama/span>
             </a>
           </li>
 
@@ -209,6 +209,12 @@
                 </li>
               </ul>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="anggaran.html">
+              <i class="fas fa-wallet"></i>
+              <span class="menu-title">Relasi Anggaran</span>
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="dokumentasi.html">
